# gt-python

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  I18N_DESIGN_PLAN.md  Makefile  PORTING_GUIDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  lint.yml  pr-title.yml  release.yml  test.yml
.sampo/: config.toml
.sampo/changesets/: ancient-runesinger-lemminkainen.md  centralize-default-locale.md  haughty-king-tuonetar.md  haughty-thunderbearer-tuoni.md  jovial-duke-mielikki.md  mighty-queen-aurelien.md  noble-stormcaller-lempo.md  pompous-duke-aino.md  pompous-earl-lempo.md  venerable-shaman-mielikki.md
examples/: conftest.py
examples/fastapi-eager/: app.py  gt.config.json  pyproject.toml
examples/fastapi-eager/scripts/: test_endpoints.py
examples/fastapi-eager/tests/: test_app.py
examples/fastapi-lazy/: app.py  pyproject.toml
examples/fastapi-lazy/scripts/: test_endpoints.py
examples/fastapi-lazy/tests/: test_app.py
examples/flask-eager/: app.py  pyproject.toml
examples/flask-eager/_gt/: es.json
examples/flask-eager/scripts/: test_endpoints.py
examples/flask-eager/tests/: test_app.py
examples/flask-lazy/: app.py  pyproject.toml
examples/flask-lazy/_gt/: fr.json
examples/flask-lazy/scripts/: test_endpoints.py
examples/flask-lazy/tests/: test_app.py
guides/: creating-a-package.md  custom-get-locale.md  declare-static.md  releasing.md  trusted-publishing-setup.md
scripts/: setup.sh
