[project]
name = "gt-python"
version = "0.1.1"
description = "General Translation Python libraries"
readme = "README.md"
requires-python = ">=3.10"

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*", "examples/*"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.9.0",
    "mypy>=1.13.0",
    "pyicumessageformat>=1.0.0",
    "icu4py>=1.0.1",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = true
exclude = ["examples/"]

[tool.pytest.ini_options]
testpaths = ["packages", "examples"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "--import-mode=importlib"
norecursedirs = ["scripts"]
